# suika-clone

./: .gitignore  Cargo.toml  README.md  index.html
pkg/: suika-clone.d.ts  suika-clone.js  suika-clone_bg.wasm.d.ts
src/: constants.rs  game.rs  main.rs  menu.rs  util.rs
