[package]
name = "suika-clone"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-persistent = { version = "0.3.4", features = ["bincode", "ini"] }
bevy_rapier2d = "0.22.0"
rand = "0.8.5"
serde = "1.0.188"
